--- a/PROJECT/AssetMangement/.classpath
+++ b/PROJECT/AssetMangement/.classpath
@@ -37,5 +37,11 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/phanv/Downloads/commons-io-1.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/phanv/Downloads/commons-fileupload-1.3.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/itext-2.1.7-sources.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/itext-2.1.7.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/poi-3.17-sources.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/poi-3.17.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-webmvc-4.3.0.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-webmvc-4.3.0.RELEASE.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
